feat: initial repo configuration and service build
